# mafia

./: .dockerignore  .env  .gitignore  config.ini  docker-compose.yml  livekit.yaml  livekit.yaml.tpl  script.py  turnserver.conf
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: db.py  entry.py  main.py  schemas.py  settings.py  utils.py  utils_common.py
backend/app/api/: auth.py  decorators.py  deps.py  rooms.py  router.py  users.py  utils.py  utils_api.py
backend/app/api/routes/: admin.py  auth.py  bot.py  friends.py  media.py  moderation.py  notifs.py  payments.py  room.py  rooms.py  updates.py  users.py
backend/app/api/v1/: assets.py  auth.py  health.py  rooms.py  users.py
backend/app/core/: background_tasks.py  clients.py  db.py  decorators.py  handlers.py  lifespan.py  logging.py  middleware.py  redis.py  roles.py  route_utils.py  security.py  settings.py
backend/app/models/: contact_request.py  friend.py  game.py  global_chat.py  kassa_payment.py  lava_payment.py  log.py  notif.py  room.py  sanction.py  settings.py  stats.py  subscription.py  update.py  user.py
backend/app/realtime/: connections.py  sio.py  sse.py  sse_rooms.py  utils.py  utils_sio.py  ws_room.py  ws_rooms.py
backend/app/realtime/namespaces/: auth.py  chat.py  room.py  rooms.py
backend/app/schemas/: admin.py  auth.py  common.py  friend.py  moderation.py  notif.py  payments.py  realtime.py  room.py  updates.py  user.py
backend/app/security/: admin_guard.py  auth_tokens.py  decorators.py  parameters.py  passwords.py  sessions.py
backend/app/services/: blacklist.py  game_stats.py  global_chat.py  livekit.py  livekit_tokens.py  logs.py  minio.py  nickname_history.py  nickname_limits.py  payments.py  presence.py  profile_theme.py  rooms_events.py  sessions.py  storage_minio.py  telegram.py  text_moderation.py  user_cache.py  user_game_stats_cache.py  user_stats.py
backend/app/static/files/: internal_regulation_personal_data.txt  public_consent_personal_data.txt  public_policy_personal_data.txt
bot/: Dockerfile  main.py  requirements.txt  utils.py
compose/: .env  docker-compose.yml  livekit.yaml
frontend/: .dockerignore  .env  .eslintrc.cjs  Dockerfile  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest  robots.txt  sitemap.xml  sw.js
frontend/scripts/: check-seo.mjs
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/components/: AppModal.vue  Auth.vue  AuthModal.vue  Carousel.vue  Chat.vue  Confirms.vue  Contact.vue  ContactModal.vue  ContactsModal.vue  Donation.vue  Friends.vue  (+60 more)
nginx/: Dockerfile  nginx.conf.template
scripts/: backup_all.sh  restore_all.sh
(+56 files in other folders)
