[tool.poetry]
name = "backend"
version = "0.10.6"
description = "Backend"
authors = ["Core Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.7"
uvicorn = {version="^0.40.0", extras=["standard"]}
gunicorn = "^25.0.3"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
SQLAlchemy = "^2.0.46"
pillow = "^12.1.0"
asyncpg = "^0.31.0"
redis = "^7.1.1"
hiredis = "^3.3.0"
minio = "^7.2.20"
httpx = "^0.28.1"
PyJWT = "^2.11.0"
livekit-api = "^1.1.0"
python-socketio = "^5.16.1"
python-engineio = "^4.13.1"
python-multipart = "^0.0.22"
structlog = "^25.5.0"
orjson = "^3.11.7"
typing-extensions = "^4.15.0"

[tool.poetry.group.dev.dependencies]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = ["I", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
