[tool.poetry]
name = "backend"
version = "0.11.4"
description = "Backend"
authors = ["Core Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.129.0"
uvicorn = {version="^0.41.0", extras=["standard"]}
gunicorn = "^25.1.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.0"
SQLAlchemy = "^2.0.46"
pillow = "^12.1.1"
asyncpg = "^0.31.0"
redis = "^7.2.0"
hiredis = "^3.3.0"
minio = "^7.2.20"
httpx = "^0.28.1"
PyJWT = "^2.11.0"
livekit-api = "^1.1.0"
safetext = "^0.3.3"
python-socketio = "^5.16.1"
python-engineio = "^4.13.1"
python-multipart = "^0.0.22"
structlog = "^25.5.0"
orjson = "^3.11.7"
typing-extensions = "^4.15.0"

[tool.poetry.group.dev.dependencies]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = ["I", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
