[tool.poetry]
name = "backend"
version = "1.0.0"
description = "Backend"
authors = ["Core Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.3"
uvicorn = {version="^0.50.2", extras=["standard"]}
gunicorn = "^26.0.0"
pydantic = "^2.13.4"
pydantic-settings = "2.14.2"
SQLAlchemy = "^2.0.51"
pillow = "^12.3.0"
asyncpg = "^0.31.0"
redis = "^8.0.1"
hiredis = "^3.4.0"
minio = "^7.2.20"
httpx = "^0.28.1"
PyJWT = "^2.13.0"
livekit-api = "^1.1.1"
safetext = "^0.3.3"
chardet = "^7.4.3"
python-socketio = "^5.16.3"
python-engineio = "^4.13.3"
python-multipart = "0.0.32"
structlog = "^26.1.0"

[tool.poetry.group.dev.dependencies]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = ["I", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
